<resources>
    <string name="app_name">Pateto Potato</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="log_in">LOG IN</string>
    <string name="preference_file_name">preference_file_name</string>
    <string name="enter_data">Enter your registered mobile number and email below</string>
    <string name="email_address">Email Address</string>
    <string name="next">NEXT</string>
    <string name="name_min_3_characters">Name (Min 3 characters)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_out">Log out</string>
    <string name="credentials_given_are">Credentials given by you are :</string>
    <string name="register">REGISTER</string>
    <string name="Home">Home</string>
    <string name="profile">My Profile</string>
    <string name="favorite">Favorite Restaurants</string>
    <string name="orderHistory">Order History</string>
    <string name="faq">FAQs</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="order_history_fragment">Order History Fragment</string>
    <string name="faq_fragment">FAQ Fragment</string>
    <string name="choose_from_below">Choose from menu listed below:</string>
    <string name="add">Add</string>
    <string name="question_one">Q.1 How will be the training be delivered?</string>
    <string name="answer_one">A.1 You will be taught using pre-recorded videos and text tutorials. The training has quizzes, assignments, and tests to help you learn better. At the end of the training you will attempt a project to get hands-on practice of what you learn during your training.</string>
    <string name="question_two">Q.2 What will be the timings of the training?</string>
    <string name="answer_two">A.2 As this is a purely online training program, you can choose to learn at any time of the day. We will recommend a pace to be followed throughout the program, but the actual timings and learning hours can be decided by students according to their convenience.</string>
    <string name="question_three">Q.3 What is the duration of training?</string>
    <string name="answer_three">A.3 The training duration is of 6 weeks.</string>
    <string name="question_four">Q.4 How many time should I spend everyday?</string>
    <string name="answer_four">A.4 We recommend spending 10-12 hours per week. However, the actual learning hours can be decided by you as per your convenience.</string>
    <string name="question_five">Q.5 When can I start my training?</string>
    <string name="answer_five">A.5 You can choose your preferred batch date while signing up for the training program.</string>
    <string name="question_six">Q.6 When will I get the certificate?</string>
    <string name="answer_six">A.6 You will be able to download the certificate once you complete your training and take the final test.</string>
    <string name="action_sort">Sort</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="enter_restaurant">Enter Restaurant</string>
    <string name="place_order">Place Order</string>
    <string name="dish_name">Dish Name</string>
    <string name="enter_otp">Enter OTP (4 characters)</string>
    <string name="new_password">New Password(Min. 4 characters)</string>
    <string name="submit">Submit</string>
    <string name="enter_OTP_message">Enter the received OTP below</string>
    <string name="previous_orders_message">Your previous orders are listed below :</string>
    <string name="date">Date</string>
    <string name="dish_cost">Rs. 499</string>
    <string name="order_placed">Your Order has been successfully placed!</string>
</resources>
