<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/Home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"/>

        <item
            android:id="@+id/favorites"
            android:title="@string/favorite"
            android:icon="@drawable/ic_favorite"/>

        <item
            android:id="@+id/orderHistory"
            android:title="@string/orderHistory"
            android:icon="@drawable/ic_history"/>

        <item
            android:id="@+id/faq"
            android:title="@string/faq"
            android:icon="@drawable/ic_faq"/>

        <item
            android:id="@+id/logout"
            android:title="@string/log_out"
            android:icon="@drawable/ic_logout"/>
    </group>
</menu>