<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ResetPasswordActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/txtChooseMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_OTP_message"
        android:textSize="18sp"
        android:layout_margin="15dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#fff"/>

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_otp"
        android:layout_below="@id/txtChooseMessage"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textNoSuggestions|number"
        android:background="@drawable/et_style"
        android:padding="10dp"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:layout_below="@+id/etOTP"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="numberPassword"
        android:background="@drawable/et_style"
        android:padding="10dp"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/etConfirmPasswordAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/etNewPassword"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="numberPassword"
        android:background="@drawable/et_style"
        android:padding="10dp"
        android:textSize="17sp"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:padding="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="#B8270E"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_below="@id/etConfirmPasswordAgain"
        android:layout_marginTop="30dp" />

</RelativeLayout>