<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5722"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:src="@drawable/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:layout_below="@+id/imgLogo"
        android:background="@drawable/et_style"
        android:padding="10dp"
        android:textSize="15sp"
        android:drawableStart="@drawable/ic_action_phone"
        android:drawablePadding="10dp"
        android:inputType="number"
        android:maxLength="10"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/etMobileNumber"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@drawable/et_style"
        android:textSize="15sp"
        android:inputType="textNoSuggestions|numberPassword"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="#C52704"
        android:textColor="#fff"
        android:padding="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="15dp"
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtRegisterYourself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"/>

</RelativeLayout>