<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activity.ForgetActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/txtEnterData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_data"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="35dp"
        android:textColor="#fff"
        android:textStyle="bold|italic"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:layout_below="@+id/txtEnterData"
        android:layout_marginTop="25dp"
        android:inputType="textNoSuggestions|number"
        android:maxLength="10"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        android:background="@drawable/et_style"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_action_phone"
        android:drawablePadding="10dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:inputType="textNoSuggestions|textEmailAddress"
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_action_email"
        android:drawablePadding="10dp"
        android:background="@drawable/et_style"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#E32706"
        android:textColor="#fff"
        android:textStyle="bold"/>

</RelativeLayout>